# pdf-attendance-processor

./: .gitignore  Dockerfile  README.md  cli.py  container.py  debug_parse_out.txt  err.txt  exceptions.py  logger.py  main.py  ocr_out.txt  out.txt  pipeline.py  pyproject.toml  requirements-docker.txt  requirements.txt  row_extractor.py  templates.py
app/: row_extractor.py  templates.py
app/core/: container.py  exceptions.py  logger.py  pipeline.py  protocols.py
app/models/: line.py  line_a.py  line_b.py  report_meta.py  type.py  type_a.py  type_b.py
app/ocr/: extractor.py  preprocess.py
attendance_processor/: app.py  container.py  errors.py  registry.py
attendance_processor/classification/: __init__.py  classifier.py
attendance_processor/config/: logging_config.py  rules.py
attendance_processor/domain/: errors.py  models.py
attendance_processor/generation/: __init__.py  base.py  excel_renderer.py  html_renderer.py  pdf_renderer.py
attendance_processor/ingestion/: __init__.py  pdf_extractor.py
attendance_processor/parsers/: base_parser.py  parser_factory.py  type_a_parser.py  type_b_parser.py
classification/: classifier.py
config/: config.json
export/a_r_25/: v1.html  v1.xlsx  v2.html  (+3 more)
logs/: .gitkeep
models/: line.py  line_a.py  line_b.py  report_meta.py  type.py  type_a.py  type_b.py
ocr/: extractor.py  preprocess.py
parsing/: parser_type_a.py  parser_type_b.py
rendering/: base_renderer.py  excel_renderer.py  html_renderer.py  pdf_renderer.py
rules/: base_rules.py  rules_type_a.py  rules_type_b.py
tests/: conftest.py  test_all.py
(+38 files in other folders)
