[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "attendance-report"
version = "1.0.0"
requires-python = ">=3.12"
dependencies = [
    "PyMuPDF",
    "pytesseract",
    "Pillow",
    "pydantic>=2",
    "openpyxl",
    "weasyprint",
    "fonttools",
]

[project.scripts]
attendance-report = "cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["attendance_processor*"]
